# sdmx-dl-api/src/main/java/sdmxdl/AvailabilityRequest.java
@@ -2,9 +2,25 @@ package sdmxdl;
 
 import lombok.NonNull;
 
+/**
+ * Parameters of {@link Provider#listAvailability(AvailabilityRequest)}.
+ *
+ * <p>The {@link #getDimension() dimension} is resolved against the structure of the flow as follows:
+ * <ul>
+ *     <li>an exact dimension id (e.g. {@code CURRENCY}) selects that dimension,</li>
+ *     <li>otherwise, an integer (e.g. {@code 1}) selects the dimension at that zero-based index,</li>
+ *     <li>an empty value ({@link #FIRST_WILDCARD_DIMENSION}, the default) selects the first wildcard
+ *     dimension of the {@link #getKey() key}.</li>
+ * </ul>
+ */
 @lombok.Value
 @lombok.Builder
 public class AvailabilityRequest implements Request {
+
+    /**
+     * Dimension value that selects the first wildcard dimension of the key.
+     */
+    public static final String FIRST_WILDCARD_DIMENSION = "";
 
     @lombok.Builder.Default
     @NonNull DatabaseRef database = DatabaseRef.NO_DATABASE;
@@ -13,7 +29,8 @@ public class AvailabilityRequest implements Request {
 
     @NonNull Key key;
 
-    @NonNull String dimension;
+    @lombok.Builder.Default
+    @NonNull String dimension = FIRST_WILDCARD_DIMENSION;
 
     @lombok.Builder.Default
     @NonNull Languages languages = Languages.ANY;
